--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,34 +1,50 @@
 <mat-toolbar color="primary" class="app-header">
+
+    <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm class="SideNavButton">
+                  <mat-icon>menu</mat-icon>
+                </button>
+
     <div><img src="../../../../assets/logo-light.png" alt="" class="positronx"></div>
     <span class="nav-tool-items">
           <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
           <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
         </span>
 </mat-toolbar>
-<router-outlet></router-outlet>
 
-<!--<div style="height: 80vh;">
-    <mat-toolbar color="primary">
-        <mat-toolbar-row>
-            <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+<mat-sidenav-container fxFlexFill class="hola">
+    <mat-sidenav #sidenav>
+        <mat-nav-list>
+            <a [routerLink]="['home']" mat-list-item>Home</a>
+            <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+<!--
+<mat-toolbar color="primary" class="app-header">
+    <mat-toolbar-row>
+        <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm class="SideNavButton">
                   <mat-icon>menu</mat-icon>
                 </button>
-            <span><img src="../../../../assets/logo-light.png" alt="" class="logo"></span>
-        </mat-toolbar-row>
-    </mat-toolbar>
-    <mat-sidenav-container fxFlexFill class="hola">
-        <mat-sidenav #sidenav>
-            <mat-nav-list>
-                <a href="#" mat-list-item>Home</a>
-                <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
-            </mat-nav-list>
-        </mat-sidenav>
-        <mat-sidenav-content fxFlexFill>
-           
-        </mat-sidenav-content>
-    </mat-sidenav-container>
-
-</div>-->
+        <span><img src="../../../../assets/logo-light.png" alt="" class="positronx"></span>
+    </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container fxFlexFill class="hola">
+    <mat-sidenav #sidenav>
+        <mat-nav-list>
+            <a [routerLink]="['home']" mat-list-item>Home</a>
+            <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>-->
 
 
 <!--<div style="height: 80vh;">
