--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ body {
     text-decoration: none;
     color: #ffffff;
     width: 120px;
+    margin-left: 30%
 }
 
 .box {
@@ -231,4 +232,13 @@ body {
     transform: scale(1);
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
+}
+
+.menu-spacer {
+    flex: 1 1 auto;
+}
+
+.hola {
+    height: 50%;
+    background: transparent;
 }
