--- a/src/app/components/search-date-range/search-date-range.component.html
+++ b/src/app/components/search-date-range/search-date-range.component.html
@@ -1,28 +1,29 @@
-<table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+<div class="container main-container">
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
-    <!--- Note that these columns can be defined in any order.
+        <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-    <!-- Details Column -->
-    <ng-container matColumnDef="detalles">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element">
-            <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                <mat-icon>details
-                    <p *ngIf=false>{{element._id}}</p>
-                </mat-icon>
-            </a>
-        </td>
+        <!-- Details Column -->
+        <ng-container matColumnDef="detalles">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element">
+                <a class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon>details
+                        <p *ngIf=false>{{element._id}}</p>
+                    </mat-icon>
+                </a>
+            </td>
 
-    </ng-container>
+        </ng-container>
 
-    <!-- Qr code Column -->
-    <ng-container matColumnDef="codigoqr">
-        <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-        <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
-    </ng-container>
+        <!-- Qr code Column -->
+        <ng-container matColumnDef="codigoqr">
+            <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
+            <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
+        </ng-container>
 
-    <!-- Weight Column 
+        <!-- Weight Column 
     
 <img [src]="TrayData.idImg" width=250px height=default />
     <ng-container matColumnDef="weight">
@@ -30,13 +31,14 @@
         <td mat-cell *matCellDef="let element"> {{element._id}} </td>
     </ng-container>-->
 
-    <!-- Date Column -->
-    <ng-container matColumnDef="fechaIngreso">
-        <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
-        <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
-    </ng-container>
+        <!-- Date Column -->
+        <ng-container matColumnDef="fechaIngreso">
+            <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
+            <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+</div>
