--- a/src/styles.css
+++ b/src/styles.css
@@ -257,3 +257,19 @@ body {
 .mat-drawer {
     margin-top: 3.4%;
 }
+
+
+/*ESTILOS DE TRAY-SEARCH DATE COMPONENT Y SEARCH BY DATE RANGE!*/
+
+mat-form-field {
+    margin-right: 12px;
+}
+
+table {
+    width: 100%;
+    margin-top: 8%
+}
+
+.main-container {
+    margin-top: 100px;
+}
