--- a/src/app/components/search-date-range/search-date-range.component.html
+++ b/src/app/components/search-date-range/search-date-range.component.html
@@ -8,7 +8,7 @@
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> No. </th>
             <td mat-cell *matCellDef="let element">
-                <a class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon>details
                         <p *ngIf=false>{{element._id}}</p>
                     </mat-icon>
