--- a/src/app/components/tray-list/tray-list.component.html
+++ b/src/app/components/tray-list/tray-list.component.html
@@ -1,46 +1,1 @@
-<mat-accordion>
-    <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Busqueda por fecha
-            </mat-panel-title>
-            <mat-panel-description>
-                Selecciona una fecha
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <mat-form-field>
-            <input matInput [matDatepicker]="picker" placeholder="" (dateInput)="addEvent('input', $event)">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-    </mat-expansion-panel>
-    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Busqueda por rango de fechas
-            </mat-panel-title>
-            <mat-panel-description>
-                Selecciona un Rango de Fechas
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <input id="rangeDate" name="rangeDate" #input="ngModel" [(ngModel)]="!rangeDate" type="text" bsDaterangepicker class="form-control" />
-        <button mat-button color="primary" (click)="obtainDate(input.viewModel)">Buscar</button>
-    </mat-expansion-panel>
-</mat-accordion>
-
-</div>
-<!--<mat-list>
-        <mat-list-item>
-            <mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Selecciona una fecha" (dateInput)="addEvent('input', $event)">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-       <input id="dateRange" name="dateRange" type="text" bsDaterangepicker (click)="getDateByRange(dateRange.value)" #dateRange>
-
-        <mat-list-item> <label for="dateOfBirth">Rango de Fecha</label>
-            <input id="rangeDate" name="rangeDate" #input="ngModel" [(ngModel)]="!rangeDate" type="text" bsDaterangepicker class="form-control" />
-            <button mat-button (click)="obtainDate(input.viewModel)">asdasd</button></mat-list-item>
-    </mat-list> -->
+sadasda
