--- a/src/app/components/search-date-range/search-date-range.component.html
+++ b/src/app/components/search-date-range/search-date-range.component.html
@@ -6,13 +6,12 @@
 
         <!-- Details Column -->
         <ng-container matColumnDef="detalles">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
-                <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details
-                        <p *ngIf=false>{{element._id}}</p>
-                    </mat-icon>
-                </a>
+                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
+                    </button>
+
+
             </td>
 
         </ng-container>
@@ -29,7 +28,13 @@
     <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>-->
+    </ng-container>
+     <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon>details
+                        <p *ngIf=false>{{element._id}}</p>
+                         </mat-icon>
+                </a>
+-->
 
         <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
