--- a/src/app/components/search-date/search-date.component.html
+++ b/src/app/components/search-date/search-date.component.html
@@ -1,6 +1,6 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-        {{error.error}}</div>
+        {{error}}</div>
     <table *ngIf="Trayxdate" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
@@ -9,13 +9,11 @@
         <!-- Details Column -->
 
         <ng-container matColumnDef="detalles">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
-                <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details
-                        <p *ngIf=false>{{element._id}}</p>
-                    </mat-icon>
-                </a>
+                <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
+               
+            </button>
             </td>
 
         </ng-container>
@@ -46,3 +44,9 @@
     </table>
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
 </div>
+<!--
+<a  (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    
+                     
+                    
+    </a>-->
