--- a/src/app/components/UserComponets/update-users/update-users.component.html
+++ b/src/app/components/UserComponets/update-users/update-users.component.html
@@ -1,1 +1,68 @@
-<p>update-users works!</p>
+<div class="login-wrapper2" fxLayout="row" fxLayoutAlign="center center">
+    <mat-card class="box2">
+        <mat-card-header>
+            <mat-card-title>Register</mat-card-title>
+        </mat-card-header>
+
+        <form [formGroup]="UpdateForm">
+
+            <mat-card-content *ngFor="let User of user.usuario">
+                <mat-form-field class="generic-fields">
+                    <input type="text" formControlName="nombre" [(ngModel)]="User.nombre" t matInput placeholder="Nombre" name="nombre">
+                </mat-form-field>
+                <mat-form-field class="generic-fields">
+                    <input formControlName="apPat" [(ngModel)]="User.apPat" matInput placeholder="Apellido Paterno" name="apPat" [ngClass]="{ 'is-invalid': submitted && f.apPat.errors }">
+
+                </mat-form-field>
+
+                <mat-form-field class="generic-fields">
+                    <input type="text" formControlName="apMat" [(ngModel)]="User.apMat" matInput placeholder="Apellido Materno" name="apMat">
+                </mat-form-field>
+
+                <mat-form-field class="generic-fields">
+                    <input formControlName="rut" [(ngModel)]="User.rut" matInput placeholder="Rut" name="rut" [ngClass]="{ 'is-invalid': submitted && f.rut.errors }">
+                </mat-form-field>
+
+                <mat-form-field class="fields-large">
+                    <mat-label>Sucursal</mat-label>
+                    <mat-select formControlName="ubicacion">
+                        <mat-option [value]="Ubicaciones[i]._id._id" *ngFor="let ubicacion of Ubicaciones;let i =index">{{Ubicaciones[i]._id.lugar}}
+                        </mat-option>
+
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field class="fields-large">
+                    <input formControlName="telefono" [(ngModel)]="User.telefono" matInput placeholder="Teléfono" name="telefono" [ngClass]="{ 'is-invalid': submitted && f.telefono.errors }">
+                </mat-form-field>
+
+            </mat-card-content>
+            <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+                {{error}}
+            </div>
+
+            <a [routerLink]="['home']" class="btn btn-link">Cancel</a>
+        </form>
+    </mat-card>
+</div>
+
+
+<!-- <div class="form-group">
+                <input type="text" [(ngModel)]="user.nombre" class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-group">
+                <input type="text" [(ngModel)]="user.apPat" class="form-control" placeholder="Email">
+            </div>
+
+            <div class="form-group">
+                <input type="text" [(ngModel)]="user.apMat" class="form-control" placeholder="Phone">
+            </div>
+            <mat-form-field class="generic-fields">
+                <mat-label>Sucursal</mat-label>
+                <mat-select formControlName="ubicacion">
+                    <mat-option [value]="Ubicaciones[i]._id._id" *ngFor="let ubicacion of Ubicaciones;let i =index">{{Ubicaciones[i]._id.lugar}}
+                    </mat-option>
+
+                </mat-select>
+            </mat-form-field>
+                -->
