--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -17,6 +17,7 @@
             <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
             <a [routerLink]="['get-users']" mat-list-item>Usuarios</a>
             <a [routerLink]="['/register']" routerLinkActive="active" mat-list-item>Registrar Usuario</a>
+            <a [routerLink]="['register/traytype']" routerLinkActive="active" mat-list-item>Registrar Tipo Bandeja</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
